--- a/SMS_Spam_Classifier.ipynb
+++ b/SMS_Spam_Classifier.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Python Implementation of Naiye Bayes Algorithm"
+        "Python Implementation of Naiye Bayes Algorithm, a SMS Spam Detection Model"
       ],
       "metadata": {
         "id": "WK6B1bbPPvL6"
